--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
 </head>
 
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="myname">Akramul Hasan</span> World</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="myname">Akramul Hasan</span> World</h1>
+            <h3>Coming JS Full Stack Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eius, ullam ipsum unde rerum tempore
+                placeat
+                laboriosam saepe perferendis quia, eos, esse iure incidunt? Fugiat ratione quisquam rem maxime? Omnis
+                pariatur
+                earum alias excepturi sit minus unde eius quasi tempore.</p>
+
+            <a class="link-button" href="#" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/ak.png" alt="Akramul">
+        </div>
+    </section>
+
 </body>
 
 </html>
