Dream big area done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
             <img src="images/ak.png" alt="Akramul">
         </div>
     </section>
+    <section class="dream-banner">
+        <div class="half-width">
+            <img src="images/ak2.png" alt="Akramul">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Became a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eius, ullam ipsum unde rerum tempore
+                placeat
+                laboriosam saepe perferendis quia, eos, esse iure incidunt? Fugiat ratione quisquam rem maxime? Omnis
+                pariatur
+                earum alias excepturi sit minus unde eius quasi tempore.</p>
+
+            <a class="link-button" href="#" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 </body>
 
